# task-manager

./: .gitignore  Makefile  README.md  data.json  db.sqlite3  dump.json  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
task_manager/: authentication.py  forms.py  login_data.json  mixins.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: data.json  database.json  test_data.json  users.json
task_manager/label/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_initial.py  0002_user_created_at.py  0003_alter_user_options_user_date_joined_user_email_and_more.py  0004_status.py  0005_rename_username_status_name.py  0006_task.py  0007_label_tasklabel_task_labels.py  0008_alter_label_name_alter_status_name_and_more.py  0009_rename_assigned_to_task_executor.py
task_manager/status/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/: apps.py  forms.py  tests.py  urls.py  views.py
task_manager/task/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  create_label.html  create_status.html  create_task.html  create_user.html  delete_label.html  delete_status.html  delete_task.html  delete_user.html  index.html  label_list.html  login_user.html  status_list.html  task_details.html  tasks_list.html  update_label.html  update_status.html  update_task.html  (+2 more)
(+44 files in other folders)
